[package]
name = "fetch-content-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
html2md = "0.2.15"
schemars = "1.2.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", tag = "rmcp-v0.6.0", package = "rmcp", features = ["server", "transport-io", "macros"] }
